@@ -1,3 +1,8 @@
+2002-02-25  Tim Waugh  <twaugh@redhat.com>
+
+	* parport_pc.c: Make sure that priv->ctr_writable includes IntEn
+	even if IRQ is given as a parameter.
+
 2002-01-21  Tim Waugh  <twaugh@redhat.com>
 
 	* daisy.c: Apply patch from Max Vorobiev to make parport_daisy_select
